<resources>
    <string name="app_name">IMPS_LIB</string>
    <string name="sdk_version">v 2.1</string>
    <string name="customer_mobile">Customer Mobile Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="aadhaar_num">Aadhaar Number</string>
    <string name="pan_num">Pan Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="consent_language">Consent Language</string>
    <string name="devices">Devices</string>
    <string name="authentication">Select Authentication Options</string>
    <string name="select_device">Select Device</string>
    <string name="loreum_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="icon">icon</string>
    <string name="ok">OK</string>
    <string name="enter_beneficiary_name">Enter Beneficiary Name</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="select_bank">Select Bank</string>
    <string name="beneficiary_account_type">Beneficiary account type</string>
    <string name="search_by_bank_name">Search by Bank Name</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="beneficiary_account_number">Enter Beneficiary Account Number</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="confirm_beneficiary_account_number">Confirm Beneficiary Account Number</string>
    <string name="enter_confirm_account_number">Enter Account Number</string>
    <string name="verify_beneficiary">Verify Beneficiary</string>
    <string name="bt_submit">Submit</string>
    <string name="charges">Charges</string>
    <string name="rupee_symbol">₹</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="verify_title">Verify this beneficiary</string>
    <string name="enter_case_deposit">Enter cash to be Deposit</string>
    <string name="convenience_fee">Convenience Fee</string>
    <string name="gst">GST @18%</string>
    <string name="total_Amount">Total Amount Payable</string>
    <string name="transfer_beneficiary_name">Beneficiary Name</string>
    <string name="transfer_account_number">Account Number</string>
    <string name="transfer_bank">Bank</string>
    <string name="transfer_ifsc_code">IFSC Code</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verify_and_proceed">Verify &amp; Proceed</string>
    <string name="resend_otp_message">Didn\'t get the OTP? Resend OTP in</string>
    <string name="resend_otp_text">Didn\'t get the OTP? Resend OTP</string>
    <string name="under_line_manage_limits"><u>Manage Limits</u></string>
    <string name="manage_limits">Manage Limits</string>
    <string name="fund_transfer_note">The transfer amount is based on your last top-up and does not show your total wallet balance.</string>
    <string name="transfer_successful">Transfer Successful</string>
    <string name="mobile_number">Enter 10-digit mobile number</string>

</resources>