<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollViewAddBeneficiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="vertical"
            android:theme="@style/Theme.ImpsSdk">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_bank"
                android:textSize="@dimen/sp15"
                style="@style/CustomTextInputLayoutOutlinedBox"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/drop_down_arrow">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteBank"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp60"
                    android:paddingStart="@dimen/dp15"
                    style="@style/edittext_style"
                    android:textSize="@dimen/sp15"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlBeneficiaryAccountNumber"
                style="@style/CustomTextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/beneficiary_account_number"
                app:placeholderText="@string/enter_account_number"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBeneficiaryAccountNumber"
                    style="@style/edittext_style"
                    android:maxLength="18"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlConfirmBeneficiaryAccountNumber"
                style="@style/CustomTextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/confirm_beneficiary_account_number"
                app:placeholderText="@string/enter_confirm_account_number"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmBeneficiaryAccountNumber"
                    style="@style/edittext_style"
                    android:maxLength="18"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlIfscCode"
                style="@style/CustomTextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/ifsc_code"
                app:placeholderText="@string/enter_ifsc_code"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIfscCode"
                    style="@style/edittext_style"
                    android:maxLength="11"
                    android:inputType="text|textCapCharacters"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlBeneficiaryName"
                style="@style/CustomTextInputLayoutOutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/enter_beneficiary_name"
                app:placeholderText="@string/beneficiary_name"
                android:textSize="@dimen/sp15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBeneficiaryName"
                    style="@style/edittext_style"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/beneficiary_account_type"
                android:textSize="@dimen/sp15"
                style="@style/CustomTextInputLayoutOutlinedBox"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/drop_down_arrow">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteAccountType"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp55"
                    android:paddingStart="@dimen/dp15"
                    android:inputType="none"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/linerLayoutBtnVerify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvVerify"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp10"
                        android:background="@drawable/border_button_drawable"
                        android:gravity="center"
                        android:paddingLeft="@dimen/dp15"
                        android:paddingRight="@dimen/dp15"
                        android:paddingTop="@dimen/dp10"
                        android:paddingBottom="@dimen/dp10"
                        android:text="@string/verify_beneficiary"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/tvCharge"
                        style="@style/RegularTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_gravity="center"
                        android:text="@string/charges"
                        android:textColor="@color/black" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tvSubmit"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp10"
                    android:background="@drawable/button_drawable"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp15"
                    android:paddingRight="@dimen/dp15"
                    android:paddingTop="@dimen/dp10"
                    android:paddingBottom="@dimen/dp10"
                    android:text="@string/bt_submit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>