<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_bg"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvTitle"
            style="@style/AlertTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp15"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:textColor="@color/black"
            android:text="@string/confirm"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvDes"
            style="@style/RegularTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:textColor="@color/black"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCancel"
                style="@style/AlertMessageTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp5"
                android:background="@drawable/cancel_button_drawable"
                android:gravity="center"
                android:paddingLeft="@dimen/dp20"
                android:paddingTop="@dimen/dp4"
                android:paddingRight="@dimen/dp20"
                android:paddingBottom="@dimen/dp4"
                android:text="@string/no"
                android:textColor="@color/red_color"
                android:textSize="@dimen/sp15" />
            <TextView
                android:id="@+id/tvProceed"
                style="@style/AlertMessageTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_marginStart="@dimen/dp5"
                android:background="@drawable/button_drawable"
                android:gravity="center"
                android:paddingLeft="@dimen/dp20"
                android:paddingTop="@dimen/dp4"
                android:paddingRight="@dimen/dp20"
                android:paddingBottom="@dimen/dp4"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/sp15" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>